# Solana_hff_bot

./: .env.example  .env.overmind  .env.overmind.example  .gitignore  .keep_files  COMPILATION_FIXES_COMPLETED.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CONSOLIDATED_STRUCTURE.md  Cargo.toml  DEPLOYMENT_REPORT.md  Dockerfile.overmind  FINAL_PROJECT_ANALYSIS.md  FINAL_PROJECT_STATUS.md  PRODUCTION_CHECKLIST.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_EXECUTIVE.md  README.md  RULES.md  SECURITY_WARNING.md  USER_GUIDELINES.md  ai_brain_test_results.json  auto-setup.sh  automated-test-scripts.sh  basic-devops-report.json  complete-vds-upgrade.sh  comprehensive-devops-report.json  comprehensive-devops-testing.py  consolidate-project.sh  deploy-cloud.sh  deploy-interactive.sh  deploy-overmind.sh  deploy-step-by-step.sh  deploy-with-existing-infra.sh  devnet-wallet.json  devnet_test_results.json  devops-testing-basic.py  devops-testing-final.py  docker-compose.infrastructure-test.yml  docker-compose.overmind-hardened.yml  (+20 more)
backup-20250617-092512/overmind-protocol/: .env.example  README.md
backup-20250617-092512/overmind-protocol/brain/: Dockerfile
backup-20250617-092512/overmind-protocol/core/: Cargo.toml  temp_ai_connector_fix.rs
backup-20250617-092512/overmind-protocol/core/src/: main.rs
backup-20250617-092512/overmind-protocol/docs/: BEST_PRACTICES_IMPLEMENTATION.md  SOLANA_HFT_STRATEGIES.md  SOLANA_INTEGRATION_SUMMARY.md
backup-20250617-092512/src.original/: main.rs
backup-20250617-092512/src.original/modules/: ai_connector.rs  data_ingestor.rs  risk.rs  soul_meteor.rs
brain/: README.md  pyproject.toml
brain/src/overmind_brain/: brain.py  decision_engine.py  helius_integration.py  main.py  market_analyzer.py  risk_analyzer.py  vector_memory.py
config/environments/: .env.example  .env.template
config/templates/: Cargo.toml
deployment/configs/: devops-requirements.txt  final-devops-assessment.json  pixi.toml  pixi.toml.overmind  production-readiness-certificate.json
deployment/scripts/: check-server-environment.sh  deploy-contabo.sh  deploy-minimal.sh  fix-devops-critical-issues.sh  fix-rust-compilation.sh  health-check-all.sh  pre-deployment-check.sh  quick-devops-fix.sh  quick-infrastructure-fix.sh  quick-setup.sh  simple-setup.sh
docs/: BEST_PRACTICES.md  CHANGELOG.md  END_TO_END_TEST_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_COMMIT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README-OVERMIND.md  README.md
docs/architecture/: TECHNICAL_SPECIFICATIONS.md
docs/completion/: ALL_TASKS_COMPLETED.md  FINAL_SYSTEM_ANALYSIS.md  MISSION_ACCOMPLISHED.md  TASK_COMPLETION_SUMMARY.md  TECHNICAL_TESTING_PROTOCOL_COMPLETED.md
docs/configuration/: ENVIRONMENT_SETUP.md
docs/deployment/: DEPLOYMENT-GUIDE.md  MANUAL-DEPLOYMENT.md  VDS_UPGRADE_SUMMARY.md
docs/evaluation/: FINAL_AI_BRAIN_EVALUATION.md
docs/guides/: MULTI_WALLET_SYSTEM.md  devops-improvement-plan.md
docs/implementation/: AI_BRAIN_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md
docs/overmind/architecture/: RULES.md
docs/reports/: FINAL_PROJECT_REPORT_JUNE_2025.md  PRODUCTION_READINESS_CERTIFICATION.md  THE_OVERMIND_PROTOCOL_PROJECT_REPORT.md
docs/security/: SECURITY_ACTIONS_COMPLETED.md
docs/testing/: AI_DATA_COMMUNICATION_TEST.json  AI_INTELLIGENCE_RESULTS.json  COMPILATION_FIX_GUIDE.md  COMPREHENSIVE_DEVOPS_TESTING_COMPLETE.md  DEVNET_TESTING_REPORT.md  DEVOPS_TESTING_SUMMARY.md  FRONT_2_COMMUNICATION_PLAN.md  FRONT_2_COMMUNICATION_RESULTS.md  FRONT_2_TEST_1_RESULTS.md  FRONT_3_PERFORMANCE_PLAN.md  FRONT_3_PERFORMANCE_RESULTS.md  FRONT_3_TEST_1_RESULTS.md  FRONT_3_TEST_2_RESULTS.md  FRONT_3_TEST_3_RESULTS.md  INFRASTRUCTURE_COMMUNICATION_TEST.json  INTEGRATION_TEST_PLAN.md  LATENCY_BENCHMARKS_TEST.json  PROTOKOL_TESTOWY_WYNIKI.md  REAL_AI_COMPONENTS_TEST.json  SIMPLE_STRESS_TEST.json  SIMPLE_THROUGHPUT_TEST.json  STRATEGIC_VALIDATION_PLAN.md  STRATEGIC_VALIDATION_RESULTS.md  SYSTEM_FUNCTIONALITY_REPORT.md  TEST_RESULTS.md
infrastructure/compose/: docker-compose.production.yml  docker-compose.simple.yml
infrastructure/deployment/scripts/: setup_best_practices.sh  start_devnet.sh
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/monitoring/: prometheus.yml
kestra-workflows/: overmind-trading-workflow.yml
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml  start-monitoring.sh
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: dashboard.yml  overmind-main.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/: final_cleanup.py  refactor_project.py  setup_environment.sh  start_longterm_validation.sh  system.sh  test_ai_data_communication.py  test_ai_intelligence.py  test_communication.sh  test_e2e_devnet.sh  test_infrastructure_communication.py  test_latency_benchmarks.py  test_real_ai_brain.py  test_stress_performance.py  test_stress_simple.py  test_throughput_performance.py  test_throughput_simple.py  verify_ai_brain_deployment.sh
src/: config.rs  lib.rs  main.rs  monitoring.rs
src/modules/: ai_connector.rs  data_ingestor.rs  dev_tracker.rs  executor.rs  hft_engine.rs  meteora_damm.rs  mod.rs  multi_wallet_config.rs  multi_wallet_executor.rs  persistence.rs  risk.rs  soul_meteor.rs  strategy.rs  wallet_manager.rs
testing/scripts/: devops-testing-suite.py  test-api-integration.py  test-devnet-dataflow.py  test-kestra-workflows.py  test-local-components.sh  test-local-integration.py  test-multi-provider.py  test-multi-wallet-system.py  test-overmind-e2e.sh
tests/: hft_engine_tests.rs  integration_tests.rs  mock_jito_server.rs  mock_tensorzero_server.rs  overmind_integration_tests.rs  test_utils.rs
(+16 files in other folders)
