[project]
name = "overmind-brain"
version = "1.0.0"
description = "THE OVERMIND PROTOCOL - Python AI Brain"
authors = ["THE OVERMIND PROTOCOL Team"]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "redis>=5.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aioredis>=2.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overmind_brain"]
